Ensure script context in subframes where webview needs definition

If a frame has guest view custom elements defined, then any iframes also
need the definition or else a webview in an iframe will not be
initialized. If the iframe contains a script element, a script context
will be created which allows for the definition of the custom element in
the iframe. If there are no script elements, then no script context is
created, so the custom element definition is not available.

We now force the creation of a script context for any subframes of a
frame which has access to guest view custom element definitions.

Bug: 788914
Change-Id: Ibdd7c321b6e67dbe913f3deb2307406102d7b44a